--- a/dot/.config/polybar/config.ini
+++ b/dot/.config/polybar/config.ini
@@ -69,7 +69,7 @@ font-1 = "Fira Code Nerd Font Mono:pixelsize=30:style=Bold;6"
 ; battery icon font
 font-2 = "Fira Code Nerd Font Mono:pixelsize=20:style=Bold;3"
 
-modules-left = xworkspaces filesystem memory cpu temperature keydbg 
+modules-left = xworkspaces filesystem memory cpu temperature keydbg kblayout 
 modules-center = date 
 modules-right = lhost rhost micvol pulseaudio backlight batteries systray pwmenu
 enable-ipc = true
@@ -83,6 +83,17 @@ wm-restack = bspwm
 ;==========================================================
 
 ;==========================================================
+
+;==========================================================
+
+[module/kblayout]
+type = custom/script
+exec = ~/.config/polybar/scripts/kb-layout.sh
+interval = 1
+click-left = ~/.config/polybar/scripts/kb-layout.sh switch
+format = <label>
+label = %output%
+format-padding = 5px
 
 ;==========================================================
 
