--- a/dot/.config/picom/picom.conf
+++ b/dot/.config/picom/picom.conf
@@ -73,16 +73,16 @@ shadow-exclude = [
 # Fade windows in/out when opening/closing and when opacity changes,
 #  unless no-fading-openclose is used.
 # fading = false
-fading = false;
+fading = true;
 
 # Opacity change between steps while fading in. (0.01 - 1.0, defaults to 0.028)
-fade-in-step = 0.02
+fade-in-step = 0.03;
 
 # Opacity change between steps while fading out. (0.01 - 1.0, defaults to 0.03)
-fade-out-step = 0.02
+fade-out-step = 0.03;
 
 # The time between steps in fade step, in milliseconds. (> 0, defaults to 10)
-fade-delta = 3
+fade-delta = 3;
 
 # Specify a list of conditions of windows that should not be faded.
 # fade-exclude = []
@@ -131,8 +131,8 @@ focus-exclude = [
 "class_g *= 'Slock'",
 "class_g *= 'dunst'",
 "class_g *= 'Dunst'",
-"class_g *= 'rofi'",
-"class_g *= 'Rofi'"
+#"class_g *= 'rofi'",
+#"class_g *= 'Rofi'"
 ];
 
 # Use fixed inactive dim value, instead of adjusting according to window opacity.
@@ -156,8 +156,8 @@ opacity-rule = [
   "100:class_g *= 'Slock'",
   "100:class_g *= 'dunst'",
   "100:class_g *= 'Dunst'",
-  "100:class_g *= 'rofi'",
-  "100:class_g *= 'Rofi'"
+#  "100:class_g *= 'rofi'",
+#  "100:class_g *= 'Rofi'"
 ]
 
 
@@ -185,9 +185,9 @@ rounded-corners-exclude = [
 # Parameters for background blurring, see the *BLUR* section for more information.
 blur-method = "gaussian" ;
 blur-size = 20
-blur-deviation = 90.0;
+blur-deviation = 40.0;
 #
-blur-strength = 90;
+blur-strength = 45;
 
 # Blur background of semi-transparent / ARGB windows.
 # Bad in performance, with driver-dependent behavior.
