--- a/dot/.config/kitty/kitty.conf
+++ b/dot/.config/kitty/kitty.conf
@@ -39,8 +39,8 @@ bold_italic_font family='0xProto Nerd Font Mono' postscript_name=0xProtoNFM-Regu
 # --------------------------
 # Cursor Settings
 # --------------------------
-cursor_shape block
-cursor_beam_thickness 10
+cursor_shape beam
+cursor_beam_thickness 2
 cursor_blink_interval 0
 cursor_trail 9
 cursor_trail_decay 0.1 0.3
