--- a/dot/.config/polybar/config.ini
+++ b/dot/.config/polybar/config.ini
@@ -61,7 +61,7 @@ border-color = ${colors.background}
 ;fonts
 
 ;main font
-font-0 = "Fira Code Nerd Font Mono:pixelsize=12:style=Regular;3"
+font-0 = "Fira Code Nerd Font Mono:pixelsize=12:style=Medium;3"
 
 ; icons font
 font-1 = "Fira Code Nerd Font Mono:pixelsize=30:style=Bold;6"
