--- a/dot/.config/polybar/config.ini
+++ b/dot/.config/polybar/config.ini
@@ -23,7 +23,7 @@
 
 ; default color scheme
 [colors]
-background = #161616
+background = #DD161616
 background-alt = #282A2E
 foreground = #F0F8FF
 primary = #FF2C2C
@@ -45,13 +45,13 @@ black = #000000
 
 
 [bar/main]
-width = 100%
+width = 1580
 height = 28
 margin-top=0
 margin-bottom=0
 fixed-center=true
-offset-x = 0%
-offset-y = 0%
+offset-x = 10
+offset-y = 1%
 background = ${colors.background}
 foreground = ${colors.foreground}
 line-size = 0pt
@@ -61,13 +61,13 @@ border-color = ${colors.background}
 ;fonts
 
 ;main font
-font-0 = "Fira Code Nerd Font Mono:pixelsize=12:style=Medium;3"
+font-0 = "Hack Nerd Font Mono:pixelsize=12:style=Medium;3"
 
 ; icons font
-font-1 = "Fira Code Nerd Font Mono:pixelsize=30:style=Bold;6"
+font-1 = "Hack Nerd Font Mono:pixelsize=30:style=Bold;6"
 
 ; battery icon font
-font-2 = "Fira Code Nerd Font Mono:pixelsize=20:style=Bold;3"
+font-2 = "Hack Nerd Font Mono:pixelsize=20:style=Bold;3"
 
 modules-left = xworkspaces filesystem memory cpu temperature keydbg kblayout 
 modules-center = date 
@@ -471,6 +471,6 @@ click-left = ~/.config/polybar/scripts/pwmenu.sh &
 
 [settings]
 ;screenchange-reload = true
-;pseudo-transparency = true
+pseudo-transparency = true
 
 ; vim:ft=dosini
