--- a/dot/.config/alacritty/alacritty.toml
+++ b/dot/.config/alacritty/alacritty.toml
@@ -32,16 +32,16 @@ multiplier = 3
 
 [font]
 # Normal font
-normal = { family = "Fira Code Nerd Font Mono", style = "Regular" }
+normal = { family = "Hack Nerd Font Mono", style = "Regular" }
 
 # Bold font
-bold = { family = "Fira Code Nerd Font Mono", style = "Regular" }
+bold = { family = "Hack Nerd Font Mono", style = "Regular" }
 
 # Italic font
-italic = { family = "Fira Code Nerd Font Mono", style = "Italic" }
+italic = { family = "Hack Nerd Font Mono", style = "Italic" }
 
 # Bold italic font
-bold_italic = { family = "Fira Code Nerd Font Mono", style = "Italic" }
+bold_italic = { family = "Hack Nerd Font Mono", style = "Italic" }
 
 # Font size
 size = 12.0
