--- a/dot/.config/picom/picom.conf
+++ b/dot/.config/picom/picom.conf
@@ -100,19 +100,19 @@ fade-delta = 3;
 
 
 # Opacity of inactive windows. (0.1 - 1.0, defaults to 1.0)
-inactive-opacity = 0.8;
+inactive-opacity = 0.5;
 
 # Opacity of window titlebars and borders. (0.1 - 1.0, disabled by default)
 # frame-opacity = 1.0
 frame-opacity = 1;
 
 # Let inactive opacity set by -i override the '_NET_WM_OPACITY' values of windows.
-# inactive-opacity-override = true
-inactive-opacity-override = false;
+inactive-opacity-override = true
+# inactive-opacity-override = false;
 
 # Default opacity for active windows. (0.0 - 1.0, defaults to 1.0)
 # active-opacity = 0.9
-active-opacity = 0.9
+active-opacity = 0.7
 
 # Dim inactive windows. (0.0 - 1.0, defaults to 0.0)
 inactive-dim = 0.0
@@ -127,12 +127,10 @@ focus-exclude = [
 "class_g = 'burpsuite'",
 "class_g = 'atril'",
 "class_g = 'zathura'",
-"class_g *= 'slock'",
-"class_g *= 'Slock'",
+#"class_g *= 'slock'",
+#"class_g *= 'Slock'",
 "class_g *= 'dunst'",
-"class_g *= 'Dunst'",
-#"class_g *= 'rofi'",
-#"class_g *= 'Rofi'"
+"class_g *= 'Dunst'"
 ];
 
 # Use fixed inactive dim value, instead of adjusting according to window opacity.
@@ -153,9 +151,8 @@ opacity-rule = [
   "100:class_g = 'atril'",
   "100:class_g = 'zathura'",
   "100:class_g *= 'slock'",
-  "100:class_g *= 'Slock'",
-  "100:class_g *= 'dunst'",
-  "100:class_g *= 'Dunst'",
+  "100:class_g = 'dunst'",
+  "100:class_g = 'Dunst'",
 #  "100:class_g *= 'rofi'",
 #  "100:class_g *= 'Rofi'"
 ]
@@ -184,10 +181,10 @@ rounded-corners-exclude = [
 
 # Parameters for background blurring, see the *BLUR* section for more information.
 blur-method = "gaussian" ;
-blur-size = 20
-blur-deviation = 40.0;
+blur-size = 0
+blur-deviation = 1;
 #
-blur-strength = 45;
+# blur-strength = 5;
 
 # Blur background of semi-transparent / ARGB windows.
 # Bad in performance, with driver-dependent behavior.
