--- a/dot/.config/polybar/config.ini
+++ b/dot/.config/polybar/config.ini
@@ -23,7 +23,7 @@
 
 ; default color scheme
 [colors]
-background = #DD161616
+background = #161616
 background-alt = #282A2E
 foreground = #F0F8FF
 primary = #FF2C2C
@@ -45,13 +45,13 @@ black = #000000
 
 
 [bar/main]
-width = 1580
+width = 100%
 height = 28
 margin-top=0
 margin-bottom=0
 fixed-center=true
-offset-x = 10
-offset-y = 1%
+offset-x = 0
+offset-y = 0
 background = ${colors.background}
 foreground = ${colors.foreground}
 line-size = 0pt
@@ -69,7 +69,7 @@ font-1 = "Hack Nerd Font Mono:pixelsize=30:style=Bold;6"
 ; battery icon font
 font-2 = "Hack Nerd Font Mono:pixelsize=20:style=Bold;3"
 
-modules-left = xworkspaces filesystem memory cpu temperature keydbg kblayout 
+modules-left = xworkspaces filesystem memory cpu temperature keydbg
 modules-center = date 
 modules-right = lhost rhost micvol pulseaudio backlight batteries systray pwmenu
 enable-ipc = true
