--- a/dot/.config/polybar/config.ini
+++ b/dot/.config/polybar/config.ini
@@ -61,13 +61,13 @@ border-color = ${colors.background}
 ;fonts
 
 ;main font
-font-0 = "Hack Nerd Font Mono:pixelsize=12:style=Medium;3"
+font-0 = "0xProto Nerd Font Mono:pixelsize=12:style=Bold;3"
 
 ; icons font
-font-1 = "Hack Nerd Font Mono:pixelsize=30:style=Bold;6"
+font-1 = "0xProto Nerd Font Mono:pixelsize=30:style=Bold;6"
 
 ; battery icon font
-font-2 = "Hack Nerd Font Mono:pixelsize=20:style=Bold;3"
+font-2 = "0xProto Nerd Font Mono:pixelsize=20:style=Bold;3"
 
 modules-left = xworkspaces filesystem memory cpu temperature keydbg
 modules-center = date 
