--- a/dot/.config/polybar/config.ini
+++ b/dot/.config/polybar/config.ini
@@ -23,7 +23,7 @@
 
 ; default color scheme
 [colors]
-background = #161616
+background = #121212
 background-alt = #282A2E
 foreground = #F0F8FF
 primary = #FF2C2C
@@ -61,15 +61,15 @@ border-color = ${colors.background}
 ;fonts
 
 ;main font
-font-0 = "0xProto Nerd Font Mono:pixelsize=12:style=Bold;3"
+font-0 = "AdwaitaMono Nerd Font Mono:pixelsize=12:style=Bold:antialias=false;3"
 
 ; icons font
-font-1 = "0xProto Nerd Font Mono:pixelsize=30:style=Bold;6"
+font-1 = "AdwaitaMono Nerd Font Mono:pixelsize=30:style=Bold:antialias=false;6"
 
 ; battery icon font
-font-2 = "0xProto Nerd Font Mono:pixelsize=20:style=Bold;3"
+font-2 = "AdwaitaMono Nerd Font Mono:pixelsize=20:style=Bold:antialias=false;3"
 
-modules-left = xworkspaces filesystem memory cpu temperature keydbg
+modules-left = xworkspaces filesystem memory cpu temperature keydbg 
 modules-center = date 
 modules-right = lhost rhost micvol pulseaudio backlight batteries systray pwmenu
 enable-ipc = true
@@ -79,17 +79,22 @@ wm-restack = bspwm
 ; wm-restack = i3
 ; override-redirect = true
 
-
 ;==========================================================
 
-;==========================================================
+[module/touchgrass]
+type = custom/script
+interval = 1
+exec = ~/.config/bspwm/custom/touchgrass status
+click-left =  ~/.config/bspwm/custom/touchgrass reset
+click-right = ~/.config/bspwm/custom/touchgrass lock-now
+# format-prefix = " "
 
 ;==========================================================
 
 [module/kblayout]
 type = custom/script
 exec = ~/.config/polybar/scripts/kb-layout.sh
-interval = 1
+# interval = 1
 click-left = ~/.config/polybar/scripts/kb-layout.sh switch
 format = <label>
 label = %output%
@@ -100,7 +105,7 @@ format-padding = 5px
 [module/keydbg]
 type = custom/script
 exec = ~/.config/polybar/scripts/key-indicator.py
-interval = 0
+# interval = 0
 tail = true
 format = %{T3}<label>%{T-}
 
