--- a/dot/.config/polybar/config.ini
+++ b/dot/.config/polybar/config.ini
@@ -25,17 +25,17 @@
 [colors]
 background = #121212
 background-alt = #282A2E
-foreground = #F0F8FF
-primary = #FF2C2C
+foreground = #d8dee9
+primary = #ff3333
 secondary = #8ABEB7
-alert = #FF2C2C
+alert = #ff3333
 disabled = #707880
 
 ; Optionally merge some specific color for other purposes
-red = #FF2C2C
+red = #ff3333
 green = #43a047
 yellow = #fdd835
-occupied = #FF2C2C
+occupied = #ff3333
 inactive = #000000
 numberinact = #6c757d
 numberact = #BDBDBD
@@ -229,7 +229,7 @@ label = %title:0:60:...%
 type = internal/fs
 interval = 25
 mount-0 = /
-label-mounted = %{F#FF2C2C}%mountpoint%:%{F-}%percentage_used:2%%
+label-mounted = %{F#ff3333}%mountpoint%:%{F-}%percentage_used:2%%
 label-unmounted = %mountpoint% not mounted
 label-unmounted-foreground = ${colors.disabled}
 label-mounted-padding = 5px
@@ -320,7 +320,7 @@ format-warn-padding = 5px
 type = internal/date
 interval = 1
 
-date = %y-%m-%d %{F#FF2C2C} %a %{F-} %I:%M:%S
+date = %y-%m-%d %{F#ff3333} %a %{F-} %I:%M:%S
 label = %date%
 label-foreground = ${colors.foreground}
  
