--- a/dot/.config/alacritty/alacritty.toml
+++ b/dot/.config/alacritty/alacritty.toml
@@ -58,13 +58,13 @@ builtin_box_drawing = true
 [colors]
 # Default colors
 [colors.primary]
-background = "#2c2c2c"
+background = "#1c1c1c"
 foreground = "#B3B1AD"
 
 # Cursor colors
 [colors.cursor]
 text = "#000000"
-cursor = "#DCA3A3"
+cursor = "#ff3333"
 
 # Selection colors
 [colors.selection]
@@ -72,25 +72,26 @@ text = "#59C2FF"
 background = "#2D3F76"
 
 
-[colors.bright] # ColorIntense
-black   = "#709080"
-red     = "#DCA3A3"
-green   = "#72D5A3"
-yellow  = "#F0DFAF"
-blue    = "#94BFF3"
-magenta = "#EC93D3"
-cyan    = "#93E0E3"
-white   = "#FFFFFF"
+[colors.bright]
+black   = "#3f3f3f"
+red     = "#FF3333"
+green   = "#C2D94C"
+yellow  = "#FF8F40"
+blue    = "#58b6ed"
+magenta = "#FFEE99"
+cyan    = "#95E6CB"
+white   = "#B3B1AD"
 
-[colors.normal] # Color
-black   = "#709080"
-red     = "#DCA3A3"
-green   = "#72D5A3"
-yellow  = "#F0DFAF"
-blue    = "#94BFF3"
-magenta = "#EC93D3"
-cyan    = "#93E0E3"
-white   = "#FFFFFF"
+[colors.normal]
+black   = "#2e333d"
+red     = "#FF3333"
+green   = "#C2D94C"
+yellow  = "#FF8F40"
+blue    = "#58b6ed"
+magenta = "#FFEE99"
+cyan    = "#95E6CB"
+white   = "#B3B1AD"
+
 
 
 [bell]
@@ -111,7 +112,7 @@ save_to_clipboard = true
 
 [cursor]
 # Cursor style
-style = { shape = "Block", blinking = "Off" }
+style = { shape = "Beam", blinking = "Off" }
 
 # Cursor blinking interval in milliseconds
 blink_interval = 750
