--- a/dot/.tmux.conf
+++ b/dot/.tmux.conf
@@ -13,6 +13,8 @@ set -g pane-active-border-style fg="red"
 #Set default terminal for proper colors
 set -g default-terminal "tmux-256color"
 set -ag terminal-overrides ",xterm-256color:RGB"
+set -ga terminal-overrides ',*:Ss=\\E[%p6%d q:Se=\\E[2 q'
+
 
 #Enable mouse support (optional, but helpful when needed)
 #set -g mouse off
