--- a/dot/.tmux.conf
+++ b/dot/.tmux.conf
@@ -13,7 +13,7 @@ set -g pane-active-border-style fg="red"
 #Set default terminal for proper colors
 set -g default-terminal "tmux-256color"
 set -ag terminal-overrides ",xterm-256color:RGB"
-set -ga terminal-overrides ',*:Ss=\\E[%p6%d q:Se=\\E[2 q'
+#set -ga terminal-overrides ',*:Ss=\\E[%p6%d q:Se=\\E[6 q'
 
 
 #Enable mouse support (optional, but helpful when needed)
@@ -47,8 +47,8 @@ set -g visual-activity off
 #====== Key Bindings ======
 
 #Reload config file
-bind r source-file ~/.tmux.conf \; display "Config reloaded!"
-bind-key -n M-r source-file ~/.tmux.conf \; display "Config reloaded!"
+bind r source-file ~/.tmux.conf \; display "  Config reloaded!"
+bind-key -n M-r source-file ~/.tmux.conf \; display "  Config reloaded!"
 
 #===== Window Management =====
 #Create new window with current directory
@@ -183,24 +183,31 @@ bind d detach-client
 set-option -g status-position top
 
 #Status bar style
-set -g status-style bg="#24282e",fg="#636c7d"
+set -g status-style bg="#24282e",fg="#6d6d6d"
 
 #Window status format
+set -g window-status-separator "" 
 set -g window-status-format " #I:#W "
-set -g window-status-current-format " #I:#W "
-#set -g window-status-current-style bg="",fg=white
-set -g window-status-current-style fg=red
+set -g window-status-current-format " #I:#W#F "
+set -g window-status-current-style bg="#24282e",fg="red"
+set -g window-status-style bg="#24282e",fg="#6d6d6d"  
+set -g window-status-activity-style bg="#24282e",fg="#6d6d6d"  
+set -g window-status-activity-style bg="#24282e",fg="#6d6d6d"
+set -g window-status-bell-style bg="yellow",fg="black"
+
 
 #Left status
-set -g status-left-length 50
+set -g status-left-length 100
 set -g status-left "[#S]"
+set -g status-left-style fg="red"
 
 #Right status
 set -g status-right-length 100
-set -g status-right "%H:%M %d-%b-%y"
+set -g status-right "[%d-%b-%y %A %H:%M]"
+set -g status-right-style fg="red"
 
 #Message style
-set -g message-style bg=orange,fg=black
+set -g message-style bg=orange,fg="#121212"
 
 #===== Additional Bindings =====
 #Open clock
