--- a/dot/.tmux.conf
+++ b/dot/.tmux.conf
@@ -199,12 +199,12 @@ set -g window-status-bell-style bg="yellow",fg="black"
 #Left status
 set -g status-left-length 100
 set -g status-left "[#S]"
-set -g status-left-style fg="red"
+set -g status-left-style fg="#7a7a7a"
 
 #Right status
 set -g status-right-length 100
 set -g status-right "[%d-%b-%y %A %H:%M]"
-set -g status-right-style fg="red"
+set -g status-right-style fg="#7a7a7a"
 
 #Message style
 set -g message-style bg=orange,fg="#121212"
