--- a/dot/.tmux.conf
+++ b/dot/.tmux.conf
@@ -189,7 +189,7 @@ set -g status-style bg="#24282e",fg="#6d6d6d"
 set -g window-status-separator "" 
 set -g window-status-format " #I:#W "
 set -g window-status-current-format " #I:#W#F "
-set -g window-status-current-style bg="#24282e",fg="red"
+set -g window-status-current-style bg="#303030",fg="red"
 set -g window-status-style bg="#24282e",fg="#6d6d6d"  
 set -g window-status-activity-style bg="#24282e",fg="#6d6d6d"  
 set -g window-status-activity-style bg="#24282e",fg="#6d6d6d"
