--- a/dot/.tmux.conf
+++ b/dot/.tmux.conf
@@ -47,8 +47,8 @@ set -g visual-activity off
 #====== Key Bindings ======
 
 #Reload config file
-bind r source-file ~/.tmux.conf \; display "  Config reloaded!"
-bind-key -n M-r source-file ~/.tmux.conf \; display "  Config reloaded!"
+bind r source-file ~/.tmux.conf \; display "Config reloaded!"
+bind-key -n M-r source-file ~/.tmux.conf \; display "Config reloaded!"
 
 #===== Window Management =====
 #Create new window with current directory
@@ -78,8 +78,8 @@ bind-key -n M-9 select-window -t 9
 bind-key -n "M-Left" previous-window
 bind-key -n "M-Right" next-window
 
-bind-key -n "M-a" previous-window
-bind-key -n "M-d" next-window
+bind-key -n "M-d" previous-window
+bind-key -n "M-f" next-window
 
 #Quick window selection
 bind-key w choose-tree -Zw
@@ -114,7 +114,8 @@ bind-key -n M-K resize-pane -U 5
 bind-key -n M-L resize-pane -R 5
 
 #Toggle between panes (like Alt-Tab)
-bind-key -n M-Tab last-pane
+# bind-key -n M-Tab last-pane
+unbind-key -n M-Tab
 
 #Swap/Switch panes
 bind-key -n M-, swap-pane -U
@@ -127,7 +128,7 @@ bind b break-pane
 #Kill pane
 bind-key -n M-x confirm-before kill-pane
 bind-key -n M-w confirm-before kill-pane
-#bind-key -n M-w confirm-before kill-pane
+bind-key -n M-Y kill-pane
 
 #Zoom pane
 bind-key -n M-z resize-pane -Z
@@ -191,8 +192,7 @@ set -g window-status-format " #I:#W "
 set -g window-status-current-format " #I:#W#F "
 set -g window-status-current-style bg="#303030",fg="red"
 set -g window-status-style bg="#24282e",fg="#6d6d6d"  
-set -g window-status-activity-style bg="#24282e",fg="#6d6d6d"  
-set -g window-status-activity-style bg="#24282e",fg="#6d6d6d"
+set -g window-status-activity-style bg="#24282e",fg="orange"
 set -g window-status-bell-style bg="yellow",fg="black"
 
 
@@ -207,7 +207,7 @@ set -g status-right "[%d-%b-%y %A %H:%M]"
 set -g status-right-style fg="#7a7a7a"
 
 #Message style
-set -g message-style bg=orange,fg="#121212"
+set -g message-style bg="#FF8F40",fg="#121212"
 
 #===== Additional Bindings =====
 #Open clock
