--- a/dot/.config/polybar/config.ini
+++ b/dot/.config/polybar/config.ini
@@ -61,13 +61,13 @@ border-color = ${colors.background}
 ;fonts
 
 ;main font
-font-0 = "AdwaitaMono Nerd Font Mono:pixelsize=12:style=Bold:antialias=false;3"
+font-0 = "Iosevka Nerd Font Mono:pixelsize=13:style=Bold:antialias=false;3"
 
 ; icons font
-font-1 = "AdwaitaMono Nerd Font Mono:pixelsize=30:style=Bold:antialias=false;6"
+font-1 = "Terminess Nerd Font Mono:pixelsize=30:style=Bold:antialias=false;6"
 
 ; battery icon font
-font-2 = "AdwaitaMono Nerd Font Mono:pixelsize=20:style=Bold:antialias=false;3"
+font-2 = "Terminess Nerd Font Mono:pixelsize=20:style=Bold:antialias=false;3"
 
 modules-left = xworkspaces filesystem memory cpu temperature keydbg 
 modules-center = date 
