--- a/dot/.config/alacritty/alacritty.toml
+++ b/dot/.config/alacritty/alacritty.toml
@@ -8,15 +8,15 @@ title = "Alacritty"
 dynamic_title = true
 
 [window.padding]
-x = 15
-y = 10
+x = 5
+y = 0
 
 [scrolling]
 history = 10000
 multiplier = 3
 
 [font]
-size = 12.0
+size = 10.0
 builtin_box_drawing = true
 
 [font.normal]
@@ -47,7 +47,7 @@ y = 0
 text = "#000000"
 
 [colors.primary]
-background = "#1E1E2E"
+background = "#1F1F1F"
 foreground = "#CDD6F4"
 
 [colors.normal]
