--- a/dot/.config/polybar/config.ini
+++ b/dot/.config/polybar/config.ini
@@ -23,19 +23,21 @@
 
 ; default color scheme
 [colors]
-background = #121212
+;background = #121212
+background = #000000
 background-alt = #282A2E
 foreground = #d8dee9
-primary = #ff3333
+;primary = #d8dee9
+primary = #d8dee9
 secondary = #8ABEB7
-alert = #ff3333
+alert = #ff0000
 disabled = #707880
 
 ; Optionally merge some specific color for other purposes
-red = #ff3333
+red = #ff0000
 green = #43a047
 yellow = #fdd835
-occupied = #ff3333
+occupied = #d8dee9
 inactive = #000000
 numberinact = #6c757d
 numberact = #BDBDBD
@@ -196,21 +198,22 @@ tray-size = 100%
 [module/xworkspaces]
 type = internal/xworkspaces
 
-label-active = %name%
-label-active-foreground = ${colors.background}
-label-active-background = ${colors.occupied}
+;label-active = %name%
+label-active = %{T3}%{T-}
+label-active-foreground = ${colors.occupied}
+label-active-background = ${colors.background}
 label-active-padding = 10px
 
-label-occupied = %name%
+label-occupied = %{T3}%{T-}
 label-occupied-foreground = ${colors.primary}
 label-occupied-background = ${colors.background}
 label-occupied-padding = 10px
 
-label-urgent = %name%
+label-urgent = %{T3}%{T-}
 label-urgent-background = ${colors.alert}
 label-urgent-padding = 10px
 
-label-empty = %name%
+label-empty = %{T3}%{T-}
 label-empty-foreground = ${colors.numberinact}
 label-empty-background = ${colors.background}
 label-empty-padding = 10px
@@ -229,7 +232,7 @@ label = %title:0:60:...%
 type = internal/fs
 interval = 25
 mount-0 = /
-label-mounted = %{F#ff3333}%mountpoint%:%{F-}%percentage_used:2%%
+label-mounted = %{F#d8dee9}%mountpoint%:%{F-}%percentage_used:2%%
 label-unmounted = %mountpoint% not mounted
 label-unmounted-foreground = ${colors.disabled}
 label-mounted-padding = 5px
@@ -320,7 +323,7 @@ format-warn-padding = 5px
 type = internal/date
 interval = 1
 
-date = %y-%m-%d %{F#ff3333} %a %{F-} %I:%M:%S
+date = %y-%m-%d %{F#d8dee9} %a %{F-} %I:%M:%S
 label = %date%
 label-foreground = ${colors.foreground}
  
