--- a/dot/.config/polybar/config.ini
+++ b/dot/.config/polybar/config.ini
@@ -25,16 +25,19 @@
 [colors]
 ;background = #121212
 background = #000000
-background-alt = #282A2E
+background-alt = #272d2e
 foreground = #d8dee9
-;primary = #d8dee9
-primary = #d8dee9
+primary = #b7c2d7
 secondary = #8ABEB7
 alert = #ff0000
 disabled = #707880
 
+selected = #f9fafb
+
+
 ; Optionally merge some specific color for other purposes
 red = #ff0000
+reddish = #c60505
 green = #43a047
 yellow = #fdd835
 occupied = #d8dee9
@@ -63,7 +66,7 @@ border-color = ${colors.background}
 ;fonts
 
 ;main font
-font-0 = "Iosevka Nerd Font Mono:pixelsize=13:style=Bold:antialias=false;3"
+font-0 = "AdwaitaMono Nerd Font Mono:pixelsize=12:style=Regular:antialias=false;3"
 
 ; icons font
 font-1 = "Terminess Nerd Font Mono:pixelsize=30:style=Bold:antialias=false;6"
@@ -198,22 +201,21 @@ tray-size = 100%
 [module/xworkspaces]
 type = internal/xworkspaces
 
-;label-active = %name%
-label-active = %{T3}%{T-}
-label-active-foreground = ${colors.occupied}
-label-active-background = ${colors.background}
+label-active = %name%
+label-active-foreground = ${colors.selected}
+label-active-background = ${colors.background-alt}
 label-active-padding = 10px
 
-label-occupied = %{T3}%{T-}
+label-occupied = %name% 
 label-occupied-foreground = ${colors.primary}
 label-occupied-background = ${colors.background}
 label-occupied-padding = 10px
 
-label-urgent = %{T3}%{T-}
+label-urgent = %name%
 label-urgent-background = ${colors.alert}
 label-urgent-padding = 10px
 
-label-empty = %{T3}%{T-}
+label-empty = %name%
 label-empty-foreground = ${colors.numberinact}
 label-empty-background = ${colors.background}
 label-empty-padding = 10px
@@ -469,8 +471,8 @@ format-warn-padding = 5px
 type = custom/text
 format = 
 format-padding=1
-format-foreground = ${colors.black}
-format-background = ${colors.occupied}
+format-foreground = ${colors.foreground}
+format-background = ${colors.background} 
 click-left = ~/.config/polybar/scripts/pwmenu.sh &
 
 
