--- a/dot/.tmux.conf
+++ b/dot/.tmux.conf
@@ -8,7 +8,7 @@
 # split lines colors
 
 set -g pane-border-style fg="#2c2c2c"
-set -g pane-active-border-style fg="red"
+set -g pane-active-border-style fg="white"
 
 #Set default terminal for proper colors
 set -g default-terminal "tmux-256color"
@@ -31,7 +31,7 @@ set -g renumber-windows on
 #Increase history limit
 set -g history-limit 50000
 
-#Reduce escape-time (helps with vim)
+#whiteuce escape-time (helps with vim)
 set -g escape-time 10
 
 #Enable focus events
@@ -184,13 +184,13 @@ bind d detach-client
 set-option -g status-position top
 
 #Status bar style
-set -g status-style bg="#24282e",fg="#6d6d6d"
+set -g status-style bg="#24282e",fg="white"
 
 #Window status format
 set -g window-status-separator "" 
 set -g window-status-format " #I:#W "
 set -g window-status-current-format " #I:#W#F "
-set -g window-status-current-style bg="#303030",fg="red"
+set -g window-status-current-style bg="#303030",fg="white"
 set -g window-status-style bg="#24282e",fg="#6d6d6d"  
 set -g window-status-activity-style bg="#24282e",fg="orange"
 set -g window-status-bell-style bg="yellow",fg="black"
