--- a/dot/.config/polybar/config.ini
+++ b/dot/.config/polybar/config.ini
@@ -66,7 +66,7 @@ border-color = ${colors.background}
 ;fonts
 
 ;main font
-font-0 = "AdwaitaMono Nerd Font Mono:pixelsize=12:style=Regular:antialias=false;3"
+font-0 = "AdwaitaMono Nerd Font Mono:pixelsize=12:style=Bold:antialias=false;3"
 
 ; icons font
 font-1 = "Terminess Nerd Font Mono:pixelsize=30:style=Bold:antialias=false;6"
@@ -234,7 +234,7 @@ label = %title:0:60:...%
 type = internal/fs
 interval = 25
 mount-0 = /
-label-mounted = %{F#d8dee9}%mountpoint%:%{F-}%percentage_used:2%%
+label-mounted = %mountpoint%:%percentage_used:2%%
 label-unmounted = %mountpoint% not mounted
 label-unmounted-foreground = ${colors.disabled}
 label-mounted-padding = 5px
@@ -288,7 +288,7 @@ interval = 2
 format-padding = 5px
 format-warn-padding = 5px
 format-prefix = RAM:
-format-prefix-foreground = ${colors.primary}
+; format-prefix-foreground = ${colors.primary}
 label = %percentage_used:02%%
 warn-percentage = 50
 format-warn = <label-warn>
@@ -306,7 +306,7 @@ type = internal/cpu
 interval = 2
 format = <label> 
 format-prefix = CPU:
-format-prefix-foreground = ${colors.primary}
+; format-prefix-foreground = ${colors.primary}
 label = %percentage:02%%
 format-padding = 5px
 
