--- a/dot/.config/alacritty/alacritty.toml
+++ b/dot/.config/alacritty/alacritty.toml
@@ -51,23 +51,23 @@ background = "#000000"
 foreground = "#FDFDFD"
 
 [colors.normal]
-black = "#222222"
-red = "#F01818"
-green = "#24D830"
-yellow = "#F0D824"
-blue = "#7890F0"
-magenta = "#F078D8"
-cyan = "#54E4E4"
-white = "#A5A5A5"
+black = "#000000"
+red = "#FF0000"
+green = "#00FF00"
+yellow = "#FFFF00"
+blue = "#00BFFF"
+magenta = "#FFC0CB"
+cyan = "#40E0D0"
+white = "#BEBEBE"
 
 [colors.bright]
-black = "#888888"
-red = "#EF8383"
-green = "#7ED684"
-yellow = "#EFE28B"
-blue = "#B3BFEF"
-magenta = "#EFB3E3"
-cyan = "#9CE2E2"
+black = "#414141"
+red = "#FFA500"
+green = "#98FB98"
+yellow = "#FFFF00"
+blue = "#0000CD"
+magenta = "#A020F0"
+cyan = "#AEEEEE"
 white = "#FFFFFF"
 
 [bell]
