--- a/dot/.tmux.conf
+++ b/dot/.tmux.conf
@@ -7,14 +7,12 @@
 
 # split lines colors
 
-set -g pane-border-style fg="#2c2c2c"
+set -g pane-border-style fg="#151515"
 set -g pane-active-border-style fg="red"
 
 #Set default terminal for proper colors
 set -g default-terminal "tmux-256color"
 set -ag terminal-overrides ",xterm-256color:RGB"
-#set -ga terminal-overrides ',*:Ss=\\E[%p6%d q:Se=\\E[6 q'
-
 
 #Enable mouse support (optional, but helpful when needed)
 #set -g mouse off
@@ -184,16 +182,16 @@ bind d detach-client
 set-option -g status-position top
 
 #Status bar style
-set -g status-style bg="#24282e",fg="red"
+set -g status-style bg="#121212",fg="red"
 
 #Window status format
 set -g window-status-separator "" 
 set -g window-status-format " #I:#W "
 set -g window-status-current-format " #I:#W#F "
-set -g window-status-current-style bg="#303030",fg="red"
-set -g window-status-style bg="#24282e",fg="#6d6d6d"  
-set -g window-status-activity-style bg="#24282e",fg="orange"
-set -g window-status-bell-style bg="yellow",fg="black"
+set -g window-status-current-style bg="#121212",fg="red"
+set -g window-status-style bg="#121212",fg="#6d6d6d"  
+set -g window-status-activity-style bg="#121212",fg="orange"
+set -g window-status-bell-style bg="yellow",fg="#121212"
 
 
 #Left status
@@ -203,7 +201,7 @@ set -g status-left-style fg="#7a7a7a"
 
 #Right status
 set -g status-right-length 100
-set -g status-right "[%d-%b-%y %A %H:%M]"
+set -g status-right "%d-%b-%y %A %H:%M"
 set -g status-right-style fg="#7a7a7a"
 
 #Message style
