--- a/dot/.config/polybar/config.ini
+++ b/dot/.config/polybar/config.ini
@@ -66,10 +66,12 @@ border-color = ${colors.background}
 font-0 = "Hack Nerd Font Mono:pixelsize=11:style=Bold:antialias=false;3"
 
 ; icons font
-font-1 = "AdwaitaMono Nerd Font Mono:pixelsize=25:style=Bold:antialias=false;6"
+font-1 = "Hack Nerd Font Mono:pixelsize=25:style=Bold:antialias=false;6"
 
 ; battery icon font
-font-2 = "AdwaitaMono Nerd Font Mono:pixelsize=20:style=Bold:antialias=false;3"
+font-2 = "Hack Nerd Font Mono:pixelsize=20:style=Bold:antialias=false;3"
+
+font-3 = "Hack Nerd Font Mono:pixelsize=16:style=Bold:antialias=false;3"
 
 modules-left = xworkspaces filesystem memory cpu temperature keydbg 
 modules-center = date 
@@ -466,6 +468,7 @@ format-warn-padding = 5px
 
 [module/pwmenu]
 type = custom/text
+format-font = 4
 format = 
 format-padding=1
 format-foreground = ${colors.foreground}
