--- a/dot/.config/polybar/config.ini
+++ b/dot/.config/polybar/config.ini
@@ -229,17 +229,6 @@ label = %title:0:60:...%
 
 ;==========================================================
 
-[module/filesystem]
-type = internal/fs
-interval = 25
-mount-0 = /
-label-mounted = %mountpoint%:%percentage_used:2%%
-label-unmounted = %mountpoint% not mounted
-label-unmounted-foreground = ${colors.disabled}
-label-mounted-padding = 5px
-
-;==========================================================
-
 
 [module/autocolor]
 type = custom/script
@@ -280,6 +269,17 @@ label-indicator-off-capslock-padding = 15px
 
 ;==========================================================
 
+[module/filesystem]
+type = internal/fs
+interval = 25
+mount-0 = /
+label-mounted = %mountpoint%:%percentage_used:2%%
+label-unmounted = %mountpoint% not mounted
+label-unmounted-foreground = ${colors.disabled}
+label-mounted-padding = 5px
+
+
+;==========================================================
 
 [module/memory]
 type = internal/memory
@@ -298,17 +298,14 @@ label-warn = %percentage_used:02%%
 
 ;==========================================================
 
-
 [module/cpu]
 type = internal/cpu
 
 interval = 2
 format = <label> 
 format-prefix = CPU:
-; format-prefix-foreground = ${colors.primary}
 label = %percentage:02%%
 format-padding = 5px
-
 warn-percentage = 50
 format-warn = <label-warn>
 format-warn-background=${colors.alert}
@@ -319,15 +316,33 @@ format-warn-padding = 5px
 
 ;==========================================================
 
+[module/temperature]
+type = internal/temperature
+
+interval = 1
+thermal-zone = 0
+hwmon-path = /sys/devices/virtual/thermal/thermal_zone0/hwmon0/temp1_input 
+warn-temperature = 60
+units = true
+format = <label>
+format-warn = <label-warn>
+format-warn-background = ${colors.red}
+label = %temperature-c%
+label-warn = %temperature-c%
+format-padding = 5px
+format-warn-padding = 5px
+
+;==========================================================
 
 [module/date]
 type = internal/date
 interval = 1
 
-date = %y-%m-%d %{F#d8dee9} %a %{F-} %I:%M:%S
-label = %date%
+date = %y-%m-%d %a %I:%M:%S
+label = "%{A3:gsimplecal:}%date%%{A}"
 label-foreground = ${colors.foreground}
- 
+date-alt = %H:%M:%S
+label-alt = %date
 
 ;==========================================================
 
@@ -445,22 +460,6 @@ ramp-capacity-4 = 󰁹
 
 ;==========================================================
 
-
-[module/temperature]
-type = internal/temperature
-
-interval = 1
-thermal-zone = 0
-hwmon-path = /sys/devices/virtual/thermal/thermal_zone0/hwmon0/temp1_input 
-warn-temperature = 60
-units = true
-format = <label>
-format-warn = <label-warn>
-format-warn-background = ${colors.red}
-label = %temperature-c%
-label-warn = %temperature-c%
-format-padding = 5px
-format-warn-padding = 5px
 
 
 ;==========================================================
