--- a/dot/.config/alacritty/alacritty.toml
+++ b/dot/.config/alacritty/alacritty.toml
@@ -48,7 +48,7 @@ text = "#000000"
 
 [colors.primary]
 background = "#000000"
-foreground = "#808080"
+foreground = "#9a9a9a"
 
 [colors.normal]
 black = "#000000"
