--- a/dot/.tmux.conf
+++ b/dot/.tmux.conf
@@ -207,6 +207,9 @@ set -g status-right-style fg="#7a7a7a"
 #Message style
 set -g message-style bg="#FF8F40",fg="#121212"
 
+#Selection style
+set -g mode-style "fg=#7aa2f7,bg=#28344a"
+
 #===== Additional Bindings =====
 #Open clock
 bind-key T clock-mode
