--- a/dot/.config/kitty/kitty.conf
+++ b/dot/.config/kitty/kitty.conf
@@ -29,7 +29,7 @@ adjust_column_width 0
 adjust_baseline 0
 enable_ligatures no
 disable_ligatures always
-font_features "FiraCode Nerd Font Mono" -calt
+font_features none 
 box_drawing_scale 0.001, 1, 1.5, 2
 # font_family      family='0xProto Nerd Font Mono' postscript_name=0xProtoNFM-Regular
 # bold_font        family='0xProto Nerd Font Mono' postscript_name=0xProtoNFM-Regular
@@ -288,7 +288,7 @@ include colors.conf
 
 
 # BEGIN_KITTY_FONTS
-font_family      family="AdwaitaMono Nerd Font Mono"
+font_family      family="FiraCode Nerd Font Mono"
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
