--- a/dot/.config/polybar/config.ini
+++ b/dot/.config/polybar/config.ini
@@ -63,15 +63,15 @@ border-color = ${colors.background}
 ;fonts
 
 ;main font
-font-0 = "FiraCode Nerd Font Mono:pixelsize=10:style=Bold:antialias=false;3"
+font-0 = "AdwaitaMono Nerd Font Mono:pixelsize=12:style=Bold:antialias=false;3"
 
 ; icons font
-font-1 = "FiraCode Nerd Font Mono:pixelsize=25:style=Bold:antialias=false;6"
+font-1 = "AdwaitaMono Nerd Font Mono:pixelsize=25:style=Bold:antialias=false;6"
 
 ; battery icon font
-font-2 = "FiraCode Nerd Font Mono:pixelsize=20:style=Bold:antialias=false;3"
+font-2 = "AdwaitaMono Nerd Font Mono:pixelsize=20:style=Bold:antialias=false;3"
 
-font-3 = "FiraCode Nerd Font Mono:pixelsize=16:style=Bold:antialias=false;3"
+font-3 = "AdwaitaMono Nerd Font Mono:pixelsize=16:style=Bold:antialias=false;3"
 
 modules-left = xworkspaces filesystem memory cpu temperature keydbg 
 modules-center = date 
