--- a/dot/.config/polybar/config.ini
+++ b/dot/.config/polybar/config.ini
@@ -63,15 +63,30 @@ border-color = ${colors.background}
 ;fonts
 
 ;main font
-font-0 = "AdwaitaMono Nerd Font Mono:pixelsize=12:style=Bold:antialias=false;3"
+font-0 = "SauceCodePro Nerd Font Mono:pixelsize=12:style=SemiBold:antialias=true;3"
 
-; icons font
-font-1 = "AdwaitaMono Nerd Font Mono:pixelsize=25:style=Bold:antialias=false;6"
+; memory icon
+font-1 = "Symbols Nerd Font Mono:pixelsize=12:style=SemiBold:antialias=false;3"
 
-; battery icon font
-font-2 = "AdwaitaMono Nerd Font Mono:pixelsize=20:style=Bold:antialias=false;3"
+; cpu icon
+font-2 = "Symbols Nerd Font Mono:pixelsize=12:style=SemiBold:antialias=false;3"
 
-font-3 = "AdwaitaMono Nerd Font Mono:pixelsize=16:style=Bold:antialias=false;3"
+; keydbg icon
+font-3 = "Symbols Nerd Font Mono:pixelsize=12:style=SemiBold:antialias=false;3"
+
+; micvol icon
+font-4 = "Symbols Nerd Font Mono:pixelsize=12:style=SemiBold:antialias=false;3"
+
+; pulseaudio icon
+font-5 = "Symbols Nerd Font Mono:pixelsize=14:style=SemiBold:antialias=false;3"
+
+; backlight icon
+font-6 = "Symbols Nerd Font Mono:pixelsize=14:style=SemiBold:antialias=false;3"
+
+; battery icon
+font-7 = "Symbols Nerd Font Mono:pixelsize=12:style=SemiBold:antialias=false;3"
+
+
 
 modules-left = xworkspaces filesystem memory cpu temperature keydbg 
 modules-center = date 
@@ -111,7 +126,8 @@ type = custom/script
 exec = ~/.config/polybar/scripts/key-indicator.py
 # interval = 0
 tail = true
-format = %{T3}<label>%{T-}
+format = <label>
+format-font = 4
 
 ;==========================================================
 
@@ -158,7 +174,7 @@ type = custom/script
 exec = ~/.config/polybar/scripts/mylhost.sh
 format = <label>
 label = %output%
-label-padding = 9px
+label-padding = 5px
 click-left = ~/.config/polybar/scripts/mylhost.sh --copy
 click-right = ~/.config/polybar/scripts/mylhost.sh --edit
 
@@ -171,7 +187,7 @@ type = custom/script
 exec = ~/.config/polybar/scripts/mytarget.sh
 format  = <label>
 label = %output%
-label-padding = 9px
+label-padding = 5px
 click-left = ~/.config/polybar/scripts/mytarget.sh --copy
 click-right = ~/.config/polybar/scripts/mytarget.sh --edit
 
@@ -182,7 +198,8 @@ click-right = ~/.config/polybar/scripts/mytarget.sh --edit
 type = custom/script
 exec = ~/.config/polybar/scripts/micvol.sh
 tail = true
-format = %{T3}<label>%{T-}
+format = <label>
+format-font = 5
 label = %output%
 
 
@@ -286,14 +303,16 @@ type = internal/memory
 interval = 2
 format-padding = 5px
 format-warn-padding = 5px
-format-prefix = RAM:
-; format-prefix-foreground = ${colors.primary}
-label = %percentage_used:02%%
+format-prefix = 
+format-prefix-font = 2
+;label = :%percentage_used:02%%
+label = :%percentage_used:02%%
 warn-percentage = 50
 format-warn = <label-warn>
 format-warn-background=${colors.alert}
-format-warn-prefix = RAM:
-label-warn = %percentage_used:02%%
+format-warn-prefix = 
+format-warn-prefix-font = 2
+label-warn = :%percentage_used:02%%
 
 
 ;==========================================================
@@ -303,14 +322,16 @@ type = internal/cpu
 
 interval = 2
 format = <label> 
-format-prefix = CPU:
-label = %percentage:02%%
+format-prefix = 
+format-prefix-font = 3
+label = :%percentage:02%%
 format-padding = 5px
 warn-percentage = 50
 format-warn = <label-warn>
 format-warn-background=${colors.alert}
-format-warn-prefix = CPU:
-label-warn = %percentage:02%%
+format-warn-prefix = 
+format-warn-prefix-font = 3
+label-warn = :%percentage:02%%
 format-warn-padding = 5px
 
 
@@ -350,10 +371,14 @@ label-alt = %date
 [module/pulseaudio]
 type = internal/pulseaudio
 format-volume-prefix-foreground = ${colors.primary}
-format-volume = %{A4:~/.config/polybar/scripts/notivol.sh up:}%{A5:~/.config/polybar/scripts/notivol.sh down:}%{T2}<ramp-volume>%{T-}%{A}%{A}
+format-volume = %{A4:~/.config/polybar/scripts/notivol.sh up:}%{A5:~/.config/polybar/scripts/notivol.sh down:}<ramp-volume>%{A}%{A}
 format-volume-padding = 5px
+
+format-volume-font = 6
+label-muted-font = 6
+
 enable-scroll = true
-label-muted = %{T2}%{T-}
+label-muted = 
 label-muted-foreground = ${colors.alert}
 label-muted-padding = 5px
 ramp-volume-0 = "" 
@@ -371,7 +396,8 @@ type = internal/backlight
 ; $ ls -1 /sys/class/backlight/
 card = intel_backlight
 ;card = amdgpu_bl0
-format = %{A4:~/.config/polybar/scripts/notibkl.sh up:}%{A5:~/.config/polybar/scripts/notibkl.sh down:}%{T2}<ramp>%{T-}%{A}%{A}
+format = %{A4:~/.config/polybar/scripts/notibkl.sh up:}%{A5:~/.config/polybar/scripts/notibkl.sh down:}<ramp>%{A}%{A}
+format-font = 7
 enable-scroll=true
 format-padding = 5px
 ramp-0 = "󰃞"
@@ -395,15 +421,15 @@ battery = BAT0
 adapter = AC
 
 poll-interval = 5
-format-charging = %{T3}<ramp-capacity><label-charging>%{T-}
-format-discharging = %{T3}<ramp-capacity>%{T-}
+format-charging = %{T8}<ramp-capacity><label-charging>%{T-}
+format-discharging = %{T8}<ramp-capacity>%{T-}
 format-charging-padding = 5px
 format-discharging-padding = 5px
 
 label-charging = 󱐋
 ;label-discharging = 
-label-full = %{T3}󰁹%{T-}
-label-low = %{T3}󰂎%{T-}
+label-full = %{T8}󰁹%{T-}
+label-low = %{T8}󰂎%{T-}
 label-low-background=${colors.red}
 
 
