--- a/dot/.config/polybar/config.ini
+++ b/dot/.config/polybar/config.ini
@@ -63,7 +63,7 @@ border-color = ${colors.background}
 ;fonts
 
 ;main font
-font-0 = "SauceCodePro Nerd Font Mono:pixelsize=12:style=SemiBold:antialias=true;3"
+font-0 = "AdwaitaMono Nerd Font Mono:pixelsize=12:style=Bold:antialias=true;3"
 
 ; memory icon
 font-1 = "Symbols Nerd Font Mono:pixelsize=12:style=SemiBold:antialias=false;3"
