--- a/dot/.config/polybar/config.ini
+++ b/dot/.config/polybar/config.ini
@@ -63,7 +63,7 @@ border-color = ${colors.background}
 ;fonts
 
 ;main font
-font-0 = "AdwaitaMono Nerd Font Mono:pixelsize=12:style=Bold:antialias=true;3"
+font-0 = "SauceCodePro Nerd Font Mono:pixelsize=12:style=SemiBold:antialias=true;3"
 
 ; memory icon
 font-1 = "Symbols Nerd Font Mono:pixelsize=12:style=SemiBold:antialias=false;3"
@@ -78,7 +78,7 @@ font-3 = "Symbols Nerd Font Mono:pixelsize=12:style=SemiBold:antialias=false;3"
 font-4 = "Symbols Nerd Font Mono:pixelsize=12:style=SemiBold:antialias=false;3"
 
 ; pulseaudio icon
-font-5 = "Symbols Nerd Font Mono:pixelsize=14:style=SemiBold:antialias=false;3"
+font-5 = "Symbols Nerd Font Mono:pixelsize=16:style=SemiBold:antialias=false;3"
 
 ; backlight icon
 font-6 = "Symbols Nerd Font Mono:pixelsize=14:style=SemiBold:antialias=false;3"
@@ -90,7 +90,7 @@ font-7 = "Symbols Nerd Font Mono:pixelsize=12:style=SemiBold:antialias=false;3"
 
 modules-left = xworkspaces filesystem memory cpu temperature keydbg 
 modules-center = date 
-modules-right = lhost rhost micvol pulseaudio backlight batteries systray pwmenu
+modules-right = lhost rhost pulseaudio backlight batteries micvol systray pwmenu
 enable-ipc = true
 
 ; wm-restack = generic
@@ -305,7 +305,6 @@ format-padding = 5px
 format-warn-padding = 5px
 format-prefix = 
 format-prefix-font = 2
-;label = :%percentage_used:02%%
 label = :%percentage_used:02%%
 warn-percentage = 50
 format-warn = <label-warn>
@@ -359,10 +358,9 @@ format-warn-padding = 5px
 type = internal/date
 interval = 1
 
-date = %y-%m-%d %a %I:%M:%S
+date = %H:%M:%S
+date-alt = %y-%m-%d %a %I:%M:%S
 label = "%{A3:gsimplecal:}%date%%{A}"
-label-foreground = ${colors.foreground}
-date-alt = %H:%M:%S
 label-alt = %date
 
 ;==========================================================
