--- a/dot/.config/polybar/config.ini
+++ b/dot/.config/polybar/config.ini
@@ -86,7 +86,8 @@ font-6 = "Symbols Nerd Font Mono:pixelsize=14:style=SemiBold:antialias=false;3"
 ; battery icon
 font-7 = "Symbols Nerd Font Mono:pixelsize=12:style=SemiBold:antialias=false;3"
 
-
+; pwmenu icon
+font-8 = "Symbols Nerd Font Mono:pixelsize=10:style=SemiBold:antialias=false;3"
 
 modules-left = xworkspaces filesystem memory cpu temperature keydbg 
 modules-center = date 
@@ -491,7 +492,7 @@ ramp-capacity-4 = 󰁹
 
 [module/pwmenu]
 type = custom/text
-format-font = 4
+format-font = 9
 format = 
 format-padding=1
 format-foreground = ${colors.foreground}
