--- a/dot/.config/polybar/config.ini
+++ b/dot/.config/polybar/config.ini
@@ -17,8 +17,6 @@
 ;
 ;==========================================================
 
-
-
 ;==========================================================
 
 ; default color scheme
@@ -84,7 +82,7 @@ font-5 = "Symbols Nerd Font Mono:pixelsize=16:style=SemiBold:antialias=false;3"
 font-6 = "Symbols Nerd Font Mono:pixelsize=14:style=SemiBold:antialias=false;3"
 
 ; battery icon
-font-7 = "Symbols Nerd Font Mono:pixelsize=12:style=SemiBold:antialias=false;3"
+font-7 = "Symbols Nerd Font Mono:pixelsize=16:style=SemiBold:antialias=false;3"
 
 ; pwmenu icon
 font-8 = "Symbols Nerd Font Mono:pixelsize=10:style=SemiBold:antialias=false;3"
@@ -161,7 +159,7 @@ label-padding = 9px
 type = custom/script
 exec = ~/.config/polybar/scripts/battery_combined.sh
 ;interval = 30 
-format = %{T3}<label>%{T-}
+format = %{T8}<label>%{T-}
 label = %output%
 format-padding = 5px
 click-left = ~/.config/polybar/scripts/battery_combined.sh --details
@@ -360,7 +358,7 @@ type = internal/date
 interval = 1
 
 date = %H:%M:%S
-date-alt = %y-%m-%d %a %I:%M:%S
+date-alt = %Y-%m-%d %a %I:%M:%S
 label = "%{A3:gsimplecal:}%date%%{A}"
 label-alt = %date
 
