--- a/dot/.config/kitty/kitty.conf
+++ b/dot/.config/kitty/kitty.conf
@@ -29,12 +29,12 @@ adjust_column_width 0
 adjust_baseline 0
 enable_ligatures no
 disable_ligatures always
-font_features none 
+font_features "FiraCode Nerd Font Mono" -calt
 box_drawing_scale 0.001, 1, 1.5, 2
-# font_family      family='0xProto Nerd Font Mono' postscript_name=0xProtoNFM-Regular
-# bold_font        family='0xProto Nerd Font Mono' postscript_name=0xProtoNFM-Regular
-# italic_font      family='0xProto Nerd Font Mono' postscript_name=0xProtoNFM-Regular
-# bold_italic_font family='0xProto Nerd Font Mono' postscript_name=0xProtoNFM-Regular
+font_family      family='AdwaitaMono Nerd Font Mono' postscript_name=AdwaitaMonoNFM-Regular
+bold_font        family='AdwaitaMono Nerd Font Mono' postscript_name=AdwaitaMonoNFM-Regular
+italic_font      family='AdwaitaMono Nerd Font Mono' postscript_name=AdwaitaMonoNFM-Regular
+bold_italic_font family='AdwaitaMono Nerd Font Mono' postscript_name=AdwaitaMonoNFM-Regular
 
 # --------------------------
 # Cursor Settings
@@ -274,22 +274,4 @@ map f10 paste_from_buffer e
 # --------------------------
 include morecolors.conf
 include colors.conf
-
 #paste_actions none
-#
-#
-# -------------------------
-
-
-#font_family      family='FiraCode Nerd Font Mono' postscript_name=FiraCodeNFM-Reg
-#bold_font        family='FiraCode Nerd Font Mono' postscript_name=FiraCodeNFM-Reg
-#italic_font      family='FiraCode Nerd Font Mono' postscript_name=FiraCodeNFM-Reg
-#bold_italic_font family='FiraCode Nerd Font Mono' postscript_name=FiraCodeNFM-Reg
-
-
-# BEGIN_KITTY_FONTS
-font_family      family="FiraCode Nerd Font Mono"
-bold_font        auto
-italic_font      auto
-bold_italic_font auto
-# END_KITTY_FONTS
